# steadfirm

./: .dockerignore  .gitignore  AGENTS.md  BACKEND_SPEC.md  Cargo.toml  PRD.md  SPEC.md  TODO.md  WEB_SPEC.md  bunfig.toml  package.json  tsconfig.base.json
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/backend/: Cargo.toml
crates/backend/migrations/: 20260311000000_initial_schema.sql
crates/backend/src/: config.rs  constants.rs  error.rs  main.rs  middleware.rs  models.rs  pagination.rs  provisioning.rs  proxy.rs  startup.rs
crates/backend/src/auth/: extractor.rs  mod.rs  session.rs
crates/backend/src/functions/: mod.rs
crates/backend/src/functions/browse/: audiobooks.rs  documents.rs  files.rs  media.rs  mod.rs  photos.rs  reading.rs
crates/backend/src/functions/classify/: heuristics.rs  json.rs  llm.rs  mod.rs  parsers.rs  probe.rs  provider.rs  stream.rs
crates/backend/src/functions/classify/groups/: audiobooks.rs  mod.rs  movies.rs  music.rs  reading.rs  tv_shows.rs
crates/backend/src/functions/metadata/: audiobooks.rs  documents.rs  files.rs  media.rs  mod.rs  reading.rs
crates/backend/src/functions/search/: audiobooks.rs  documents.rs  files.rs  helpers.rs  llm.rs  media.rs  mod.rs  photos.rs  reading.rs
crates/backend/src/functions/upload/: audiobooks.rs  documents.rs  files.rs  media.rs  mod.rs  photos.rs  reading.rs
crates/backend/src/provision/: mod.rs  provisioning.rs  startup.rs
crates/backend/src/routes/: admin.rs  audiobooks.rs  classify.rs  documents.rs  dropzone.rs  files.rs  hooks.rs  media.rs  mod.rs  photos.rs  proxy.rs  reading.rs  search.rs  users.rs
crates/backend/src/services/: ai.rs  audiobookshelf.rs  ffprobe.rs  immich.rs  jellyfin.rs  kavita.rs  mod.rs  paperless.rs
crates/shared/: Cargo.toml
crates/shared/src/: classify.rs  lib.rs  models.rs  search.rs  services.rs
infra/: .env.example  Caddyfile  Dockerfile.backend  dev.sh  docker-compose.dev.yml  docker-compose.yml  init-databases.sql  reset-dev.sh  seed-dev.sh
scripts/: check-all.sh
services/betterauth/: Dockerfile  package.json
services/betterauth/src/: auth.ts  index.ts
specs/: ARCHITECTURE.md  AUTH.md  INFRASTRUCTURE.md  METADATA.md  PROVISIONING.md  README.md  REFACTOR.md  SEARCH.md  UPLOAD.md
test/: setup.ts
web/: eslint.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: ThemedApp.tsx  main.tsx  query-client.ts  router.tsx
web/src/api/: audiobooks.ts  classify.ts  client.ts  documents.ts  files.ts  media.ts  photos.ts  reading.ts  search.ts  upload.ts  users.ts
web/src/components/: AudiobookPlayerManager.tsx  DebugPanel.tsx  DevLlmToggle.tsx  EmptyState.tsx  ErrorBoundary.tsx  MusicPlayerManager.tsx  SearchModal.tsx  Skeletons.tsx
web/src/hooks/: useAuth.ts  useContentList.ts  useCurrentUser.ts  useIntersection.ts  useSearch.ts  useStreamingClassify.ts  useTheme.ts
web/src/layouts/: AppLayout.tsx  (+1 more)
(+39 files in other folders)
