[package]
name = "steadfirm-app"
version.workspace = true
edition.workspace = true

[dependencies]
steadfirm-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# Tauri will be added when we scaffold with `cargo tauri init`
# tauri = "2"
