[package]
name = "steadfirm-backend"
version.workspace = true
edition.workspace = true

[dependencies]
steadfirm-shared = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
tokio-util = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex-lite = { workspace = true }
rig-core = { workspace = true }
schemars = { workspace = true }
